updated version of new getframe technique

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required( VERSION 2.6 )
 
 project ( LIBSDL_FFMPEG )
 
+set( CMAKE_C_FLAGS "-g -ggdb" )
+
 add_subdirectory( lib )
 
-#add_subdirectory( bin )
+add_subdirectory( bin )
