--- a/trunk/SDL_ffmpeg_osx.cbp
+++ b/trunk/SDL_ffmpeg_osx.cbp
@@ -96,10 +96,13 @@
 				<Option compiler="gcc" />
 				<Option parameters="/Users/arjan/Music/Armin_van_Buuren_presents_-_A_State_of_Trance_Episode_349.mp3" />
 			</Target>
+			<Target title="all">
+				<Option output="bin/example" prefix_auto="1" extension_auto="1" />
+				<Option type="0" />
+				<Option compiler="gcc" />
+				<Option parameters="/Users/arjan/Movies/scrtest.mpg" />
+			</Target>
 		</Build>
-		<VirtualTargets>
-			<Add alias="all" targets="multichannelexample;" />
-		</VirtualTargets>
 		<Compiler>
 			<Add option="-Wall" />
 			<Add directory="include" />
