added YUY2 output routine

--- a/trunk/lib/CMakeLists.txt
+++ b/trunk/lib/CMakeLists.txt
@@ -3,13 +3,17 @@
 add_library( 	SDL_ffmpeg
 				${LIBSDL_FFMPEG_SOURCE_DIR}/src/SDL_ffmpeg.c )
 
+find_package( SDL )
+
+include_directories( ${SDL_INCLUDE_DIR} )
+
 target_link_libraries(	SDL_ffmpeg
 						avformat
 						avcodec
 						avutil
 						z
 						bz2
-						SDL )
+						${SDL_LIBRARY} )
 
 include_directories( ${LIBSDL_FFMPEG_SOURCE_DIR}/include )
 
