added scaling to YUV conversion

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required( VERSION 2.6 )
 
 project ( LIBSDL_FFMPEG )
 
-set( CMAKE_C_FLAGS "-g -ggdb" )
+set( CMAKE_C_FLAGS "-O2" )
 
 add_subdirectory( lib )
 
