--- a/trunk/SDL_ffmpeg_osx.cbp
+++ b/trunk/SDL_ffmpeg_osx.cbp
@@ -100,7 +100,7 @@
 				<Option output="bin/example" prefix_auto="1" extension_auto="1" />
 				<Option type="0" />
 				<Option compiler="gcc" />
-				<Option parameters="/Users/arjan/Movies/scrtest.mpg" />
+				<Option parameters="/Users/arjan/Movies/teaser.mov" />
 			</Target>
 		</Build>
 		<Compiler>
