--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -2,7 +2,11 @@ cmake_minimum_required( VERSION 2.6 )
 
 project ( LIBSDL_FFMPEG )
 
-set( CMAKE_C_FLAGS "-O2" )
+#set( CMAKE_C_FLAGS "-O2" )
+
+#set( CMAKE_C_FLAGS "-ggdb" )
+
+set( CMAKE_DEBUG_POSTFIX "d" )
 
 add_subdirectory( lib )
 
