start of recording, possibility to add video streams

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -6,6 +6,8 @@ project ( SDL_FFMPEG )
 #set( CMAKE_C_FLAGS "-ggdb" )
 #set( CMAKE_DEBUG_POSTFIX "d" )
 
+set( CMAKE_BUILD_TYPE "Debug" )
+
 add_subdirectory( lib )
 
 add_subdirectory( bin )
