--- a/trunk/SDL_ffmpeg.cbp
+++ b/trunk/SDL_ffmpeg.cbp
@@ -62,6 +62,40 @@
             <DistClean command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/lib/Makefile&quot; clean" />
          </MakeCommands>
       </Target>
+      <Target title="audioplayer">
+         <Option output="/Users/arjan/C/SDL_ffmpeg/trunk/bin/audioplayer" prefix_auto="0" extension_auto="0" />
+         <Option working_dir="/Users/arjan/C/SDL_ffmpeg/trunk/bin" />
+         <Option object_output="./" />
+         <Option type="1" />
+         <Option compiler="gcc" />
+         <Compiler>
+            <Add directory="/Library/Frameworks/SDL.framework/Headers" />
+            <Add directory="/Users/arjan/C/SDL_ffmpeg/trunk/include" />
+         </Compiler>
+         <MakeCommands>
+            <Build command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; audioplayer" />
+            <CompileFile command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; &quot;$file&quot;" />
+            <Clean command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; clean" />
+            <DistClean command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; clean" />
+         </MakeCommands>
+      </Target>
+      <Target title="audioplayer/fast">
+         <Option output="/Users/arjan/C/SDL_ffmpeg/trunk/bin/audioplayer" prefix_auto="0" extension_auto="0" />
+         <Option working_dir="/Users/arjan/C/SDL_ffmpeg/trunk/bin" />
+         <Option object_output="./" />
+         <Option type="1" />
+         <Option compiler="gcc" />
+         <Compiler>
+            <Add directory="/Library/Frameworks/SDL.framework/Headers" />
+            <Add directory="/Users/arjan/C/SDL_ffmpeg/trunk/include" />
+         </Compiler>
+         <MakeCommands>
+            <Build command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; audioplayer/fast" />
+            <CompileFile command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; &quot;$file&quot;" />
+            <Clean command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; clean" />
+            <DistClean command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; clean" />
+         </MakeCommands>
+      </Target>
       <Target title="example">
          <Option output="/Users/arjan/C/SDL_ffmpeg/trunk/bin/example" prefix_auto="0" extension_auto="0" />
          <Option working_dir="/Users/arjan/C/SDL_ffmpeg/trunk/bin" />
@@ -91,6 +125,40 @@
          </Compiler>
          <MakeCommands>
             <Build command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; example/fast" />
+            <CompileFile command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; &quot;$file&quot;" />
+            <Clean command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; clean" />
+            <DistClean command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; clean" />
+         </MakeCommands>
+      </Target>
+      <Target title="multichannel">
+         <Option output="/Users/arjan/C/SDL_ffmpeg/trunk/bin/multichannel" prefix_auto="0" extension_auto="0" />
+         <Option working_dir="/Users/arjan/C/SDL_ffmpeg/trunk/bin" />
+         <Option object_output="./" />
+         <Option type="1" />
+         <Option compiler="gcc" />
+         <Compiler>
+            <Add directory="/Library/Frameworks/SDL.framework/Headers" />
+            <Add directory="/Users/arjan/C/SDL_ffmpeg/trunk/include" />
+         </Compiler>
+         <MakeCommands>
+            <Build command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; multichannel" />
+            <CompileFile command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; &quot;$file&quot;" />
+            <Clean command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; clean" />
+            <DistClean command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; clean" />
+         </MakeCommands>
+      </Target>
+      <Target title="multichannel/fast">
+         <Option output="/Users/arjan/C/SDL_ffmpeg/trunk/bin/multichannel" prefix_auto="0" extension_auto="0" />
+         <Option working_dir="/Users/arjan/C/SDL_ffmpeg/trunk/bin" />
+         <Option object_output="./" />
+         <Option type="1" />
+         <Option compiler="gcc" />
+         <Compiler>
+            <Add directory="/Library/Frameworks/SDL.framework/Headers" />
+            <Add directory="/Users/arjan/C/SDL_ffmpeg/trunk/include" />
+         </Compiler>
+         <MakeCommands>
+            <Build command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; multichannel/fast" />
             <CompileFile command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; &quot;$file&quot;" />
             <Clean command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; clean" />
             <DistClean command="/opt/local/bin/gmake -f &quot;/Users/arjan/C/SDL_ffmpeg/trunk/bin/Makefile&quot; clean" />
@@ -135,7 +203,11 @@
       </Unit>
       <Unit filename="/Users/arjan/C/SDL_ffmpeg/trunk/src/SDL_ffmpeg.c">
       </Unit>
+      <Unit filename="/Users/arjan/C/SDL_ffmpeg/trunk/src/audioplayer.c">
+      </Unit>
       <Unit filename="/Users/arjan/C/SDL_ffmpeg/trunk/src/example.c">
+      </Unit>
+      <Unit filename="/Users/arjan/C/SDL_ffmpeg/trunk/src/multichannel.c">
       </Unit>
       <Unit filename="/Users/arjan/C/SDL_ffmpeg/trunk/src/record.c">
       </Unit>
