first working version without threads, cleanup needed, examples need to be updated

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -2,8 +2,7 @@ cmake_minimum_required( VERSION 2.6 )
 
 project ( SDL_FFMPEG )
 
-#set( CMAKE_C_FLAGS "-O2" )
-#set( CMAKE_C_FLAGS "-ggdb" )
+set( CMAKE_C_FLAGS "-ansi -D_ISOC99_SOURCE -std=c99" )
 set( CMAKE_DEBUG_POSTFIX "d" )
 
 add_subdirectory( lib )
