added all warnings to build environment

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required( VERSION 2.6 )
 
 project ( SDL_FFMPEG )
 
-set( CMAKE_C_FLAGS "-ansi -D_ISOC99_SOURCE -std=c99 -O2" )
+set( CMAKE_C_FLAGS "-Wall -ansi -D_ISOC99_SOURCE -std=c99 -O2" )
 set( CMAKE_DEBUG_POSTFIX "d" )
 
 add_subdirectory( lib )
